--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 # example netlify.toml
 [build]
-  command = "npm ru build"
+  command = "vite build"
   functions = "netlify/functions"
   publish = "dist"
 
